Sam-Hornby.bless.a046357a34c062ca6d307152fc396a7f1481ba5b
    Updating `tuna` index
 Downloading crates ...
  Downloaded planus v1.1.1 (registry `tuna`)
  Downloaded debug_unsafe v0.1.3 (registry `tuna`)
  Downloaded polars-time v0.49.1 (registry `tuna`)
  Downloaded polars-schema v0.49.1 (registry `tuna`)
  Downloaded polars-error v0.49.1 (registry `tuna`)
  Downloaded boxcar v0.2.13 (registry `tuna`)
  Downloaded atoi_simd v0.16.1 (registry `tuna`)
  Downloaded array-init-cursor v0.2.1 (registry `tuna`)
  Downloaded polars-mem-engine v0.49.1 (registry `tuna`)
  Downloaded polars-row v0.49.1 (registry `tuna`)
  Downloaded skiplist v0.5.1 (registry `tuna`)
  Downloaded argminmax v0.6.3 (registry `tuna`)
  Downloaded polars-arrow v0.49.1 (registry `tuna`)
  Downloaded polars v0.49.1 (registry `tuna`)
  Downloaded comfy-table v7.1.4 (registry `tuna`)
  Downloaded polars-arrow-format v0.2.0 (registry `tuna`)
  Downloaded polars-core v0.49.1 (registry `tuna`)
  Downloaded polars-utils v0.49.1 (registry `tuna`)
  Downloaded polars-lazy v0.49.1 (registry `tuna`)
  Downloaded polars-expr v0.49.1 (registry `tuna`)
  Downloaded polars-sql v0.49.1 (registry `tuna`)
  Downloaded polars-compute v0.49.1 (registry `tuna`)
  Downloaded polars-ops v0.49.1 (registry `tuna`)
  Downloaded polars-stream v0.49.1 (registry `tuna`)
  Downloaded polars-io v0.49.1 (registry `tuna`)
  Downloaded polars-parquet v0.49.1 (registry `tuna`)
  Downloaded polars-plan v0.49.1 (registry `tuna`)
  Downloaded object_store v0.12.3 (registry `tuna`)
   Compiling libc v0.2.174
   Compiling proc-macro2 v1.0.95
   Compiling unicode-ident v1.0.18
   Compiling version_check v0.9.5
    Checking cfg-if v1.0.1
   Compiling shlex v1.3.0
   Compiling autocfg v1.5.0
   Compiling crossbeam-utils v0.8.21
   Compiling serde v1.0.219
    Checking either v1.15.0
   Compiling rayon-core v1.12.1
   Compiling zerocopy v0.8.26
    Checking bitflags v2.9.1
   Compiling libm v0.2.15
   Compiling signal-hook v0.3.18
   Compiling lock_api v0.4.13
   Compiling parking_lot_core v0.9.11
    Checking allocator-api2 v0.2.21
   Compiling num-traits v0.2.19
    Checking scopeguard v1.2.0
    Checking smallvec v1.15.1
    Checking crossbeam-epoch v0.9.18
    Checking equivalent v1.0.2
   Compiling rustversion v1.0.21
   Compiling quote v1.0.40
    Checking foldhash v0.1.5
    Checking crossbeam-deque v0.8.6
    Checking memchr v2.7.5
   Compiling syn v2.0.104
    Checking signal-hook-registry v1.4.5
   Compiling jobserver v0.1.33
    Checking parking_lot v0.12.4
   Compiling cc v1.2.30
    Checking getrandom v0.2.16
    Checking regex-syntax v0.8.5
    Checking rayon v1.10.0
    Checking aho-corasick v1.1.3
    Checking rand_core v0.6.4
   Compiling pkg-config v0.3.32
    Checking array-init-cursor v0.2.1
    Checking log v0.4.27
   Compiling heck v0.5.0
    Checking castaway v0.2.4
   Compiling slotmap v1.0.7
    Checking itoa v1.0.15
    Checking ppv-lite86 v0.2.21
    Checking static_assertions v1.1.0
    Checking ryu v1.0.20
   Compiling polars-utils v0.49.1
    Checking simdutf8 v0.1.5
   Compiling zstd-safe v7.2.4
   Compiling psm v0.1.26
   Compiling zstd-sys v2.0.15+zstd.1.5.7
   Compiling stacker v0.1.21
   Compiling lz4-sys v1.11.1+lz4-1.10.0
    Checking iana-time-zone v0.1.63
    Checking rand_chacha v0.3.1
    Checking siphasher v1.0.1
    Checking chrono v0.4.41
    Checking rand v0.8.5
    Checking phf_shared v0.12.1
    Checking regex-automata v0.4.9
    Checking memmap2 v0.9.7
    Checking raw-cpuid v11.5.0
   Compiling polars-schema v0.49.1
   Compiling chrono-tz v0.10.4
    Checking phf v0.12.1
    Checking mio v1.0.4
   Compiling polars-arrow v0.49.1
   Compiling rustix v0.38.44
    Checking debug_unsafe v0.1.3
    Checking atoi_simd v0.16.1
    Checking signal-hook-mio v0.2.4
   Compiling polars-compute v0.49.1
    Checking unicode-segmentation v1.12.0
    Checking ethnum v1.5.2
    Checking regex v1.11.1
    Checking linux-raw-sys v0.4.15
    Checking dyn-clone v1.0.19
    Checking streaming-iterator v0.1.9
   Compiling getrandom v0.3.3
    Checking skiplist v0.5.1
   Compiling ahash v0.8.12
    Checking once_cell v1.21.3
    Checking strength_reduce v0.2.4
    Checking fast-float2 v0.2.3
    Checking unicode-width v0.2.0
   Compiling polars-core v0.49.1
   Compiling crc32fast v1.5.0
    Checking alloc-no-stdlib v2.0.4
    Checking tinyvec_macros v0.1.1
    Checking uuid v1.17.0
    Checking tinyvec v1.9.0
    Checking alloc-stdlib v0.2.2
    Checking crossterm v0.28.1
    Checking rand_distr v0.4.3
   Compiling polars-ops v0.49.1
    Checking zlib-rs v0.5.1
    Checking base64 v0.22.1
   Compiling serde_derive v1.0.219
   Compiling bytemuck_derive v1.10.0
   Compiling strum_macros v0.26.4
    Checking comfy-table v7.1.4
    Checking boxcar v0.2.13
   Compiling snap v1.1.1
    Checking xxhash-rust v0.8.15
    Checking unicode-normalization v0.1.24
    Checking libz-rs-sys v0.5.1
    Checking brotli-decompressor v4.0.3
    Checking lz4 v1.28.1
    Checking bytemuck v1.23.1
    Checking unicode-reverse v1.0.9
    Checking argminmax v0.6.3
    Checking fallible-streaming-iterator v0.1.9
    Checking hex v0.4.3
    Checking streaming-decompression v0.1.2
    Checking flate2 v1.1.2
    Checking now v0.1.3
    Checking polars-parquet-format v0.1.0
    Checking home v0.5.11
    Checking brotli v7.0.0
    Checking glob v0.3.2
    Checking percent-encoding v2.3.1
   Compiling recursive-proc-macro-impl v0.1.1
   Compiling polars-plan v0.49.1
    Checking utf8parse v0.2.2
   Compiling ident_case v1.0.1
   Compiling fnv v1.0.7
   Compiling strsim v0.11.1
    Checking anstyle-parse v0.2.7
    Checking recursive v0.1.1
   Compiling rustix v1.0.8
    Checking colorchoice v1.0.4
   Compiling darling_core v0.20.11
    Checking zstd v0.13.3
    Checking anstyle-query v1.1.3
    Checking is_terminal_polyfill v1.70.1
    Checking anstyle v1.0.11
    Checking anstream v0.6.19
   Compiling polars-lazy v0.49.1
   Compiling convert_case v0.7.1
   Compiling instability v0.3.9
   Compiling paste v1.0.15
    Checking linux-raw-sys v0.9.4
    Checking itertools v0.13.0
   Compiling derive_more-impl v2.0.1
   Compiling polars v0.49.1
   Compiling litrs v0.4.1
   Compiling indoc v2.0.6
    Checking unicode-width v0.1.14
    Checking clap_lex v0.7.5
   Compiling document-features v0.2.11
    Checking clap_builder v4.5.41
    Checking derive_more v2.0.1
    Checking strum v0.26.3
   Compiling clap_derive v4.5.41
    Checking env_filter v0.1.3
    Checking sqlparser v0.53.0
   Compiling darling_macro v0.20.11
    Checking unicode-truncate v1.1.0
   Compiling darling v0.20.11
    Checking cassowary v0.3.0
    Checking jiff v0.2.15
    Checking fastrand v2.3.0
    Checking crossterm v0.29.0
    Checking tempfile v3.23.0
    Checking clap v4.5.41
    Checking hashbrown v0.15.4
    Checking compact_str v0.8.1
    Checking bytes v1.10.1
    Checking hashbrown v0.14.5
    Checking planus v1.1.1
    Checking indexmap v2.10.0
    Checking lru v0.12.5
    Checking ratatui v0.29.0
    Checking polars-arrow-format v0.2.0
    Checking env_logger v0.11.8
    Checking polars-error v0.49.1
    Checking polars-row v0.49.1
    Checking polars-parquet v0.49.1
    Checking polars-time v0.49.1
    Checking polars-io v0.49.1
error[E0282]: type annotations needed
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/polars-plan-0.49.1/src/plans/aexpr/function_expr/trigonometry.rs:126:58
    |
126 |         broadcast_binary_elementwise(y, x, |yv, xv| Some(yv?.atan2(xv?))).into_column(),
    |                                                          ^^^ cannot infer type

For more information about this error, try `rustc --explain E0282`.
error: could not compile `polars-plan` (lib) due to 1 previous error
